--- a/index.html
+++ b/index.html
@@ -20,23 +20,15 @@
           <div>
             <div class="text-3xl">Alvin Ng</div> 
             <div>
-              Tech Lead, Full-stack Engineer
+              Full-stack Tech Lead
             </div>
           </div>
           
           <div class="text-right">
-            <p>
-              Phone: +65 9172 5582
-            </p>
-            <p>
-              Email: alvinng15@gmail.com
-            </p>
-            <p>
-              Linkedin: https://www.linkedin.com/in/alvinncx/
-            </p>
-            <p>
-              GitHub: https://github.com/alvinncx
-            </p>
+            <p>Phone: +65 9172 5582</p>
+            <p>Email: alvinng15@gmail.com</p>
+            <p>Linkedin: https://www.linkedin.com/in/alvinncx/</p>
+            <p>GitHub: https://github.com/alvinncx</p>
           </div>
         </div>
 
@@ -47,8 +39,8 @@
             Objective
           </div>
           <div style="flex: 5;">
-            Seeking an <strong>engineering manager or senior engineer role</strong> involved in software development and decision-making.
-            As a full-stack product engineer, I enjoy building solutions that can directly address problems within a market or company.
+            Seeking a <strong>tech lead role</strong> with direct contribution to product success.
+            I enjoy building systems and applications that cross business and technical domains, resulting in positive impact for businesses and end-users.
           </div>
         </div>
 
