--- a/index.html
+++ b/index.html
@@ -99,6 +99,16 @@
                       <p class="my-2">
                         {{ summary }}
                       </p> 
+                      {{#each subsections}}
+                        <div class="my-3">
+                          <div class="font-bold">{{ heading }}</div>
+                          <ul class="list-inside list-disc">
+                            {{#each items}}
+                            <li>{{ this }}</li>
+                            {{/each}}
+                          </ul>
+                        </div>
+                      {{/each}}
                       <ul class="list-inside list-disc">
                         {{#each list}}
                         <li>{{ this }}</li>
