--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       
     </style>
   </head>
-  <body class="p-5">
+  <body class="p-5 px-10">
     <div class="flex">
       <div id="left" >
         <div class="flex justify-between">
@@ -38,7 +38,7 @@
           <div class="uppercase font-bold text-blue-600" style="flex: 1;">
             Objective
           </div>
-          <div style="flex: 5;">
+          <div style="flex: 4;">
             Seeking a <strong>tech lead role</strong> with direct contribution to product success.
             I enjoy building systems and applications that cross business and technical domains, resulting in positive impact for businesses and end-users.
           </div>
@@ -50,7 +50,7 @@
           <div class="uppercase font-bold text-blue-600" style="flex: 1;">
             Key Skills
           </div>
-          <div id="skills" style="flex: 5;">
+          <div id="skills" style="flex: 4;">
             <div>
               <script id="skill-template" type="text/x-handlebars-template">
                 {{#each this}}
@@ -80,7 +80,7 @@
           <div class="uppercase font-bold text-blue-600" style="flex: 1;">
             Experience
           </div>
-          <div id="experiences" style="flex: 5;">
+          <div id="experiences" style="flex: 4;">
             <div>
               <script id="experience-template" type="text/x-handlebars-template">
                 {{#each this}}
@@ -128,7 +128,7 @@
           <div class="uppercase font-bold text-blue-600" style="flex: 1;">
             Technologies
           </div>
-          <div id="technologies" style="flex: 5;">
+          <div id="technologies" style="flex: 4;">
             <div>
               <script id="technology-template" type="text/x-handlebars-template">
                 {{#each this}}
@@ -151,10 +151,10 @@
         <div class="border-2 border-black my-8 border-blue-600"></div>
 
         <div class="flex">
-          <div class="uppercase font-bold text-blue-600" style="flex: 1;">
-            Personal Pursuits
+          <div class="uppercase font-bold text-blue-600" style="flex: 1 1 0;">
+            Personal <br> Pursuits
           </div>
-          <div id="personal" style="flex: 5;">
+          <div id="personal" style="flex: 4;">
             <script id="personal-template" type="text/x-handlebars-template">
               {{#each this}}
                 <div class="mb-5">
@@ -181,13 +181,14 @@
           </div>
         </div>
         
+        <div style="page-break-after: always;"></div>
         <div class="border-2 border-black my-8 border-blue-600"></div>
 
         <div class="flex">
           <div class="uppercase font-bold text-blue-600" style="flex: 1;">
             Education
           </div>
-          <div id="educations" style="flex: 5;">
+          <div id="educations" style="flex: 4;">
             <script id="education-template" type="text/x-handlebars-template">
               {{#each this}}
                 <div class="mb-5">
