--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
             Objective
           </div>
           <div style="flex: 4;">
-            Seeking a <strong>tech lead role</strong> with direct contribution to product success.
-            I enjoy building systems and applications that cross business and technical domains, resulting in positive impact for businesses and end-users.
+            Seeking a <strong>tech lead role</strong> with hands-on engineering responsiblites that directly contribute to product success.
+            I enjoy building systems and applications that require decision making skills that span business and technical domains, resulting in positive impact for businesses and end-users.
           </div>
         </div>
 
